--- a/portfolio-frontend/package.json
+++ b/portfolio-frontend/package.json
@@ -15,6 +15,9 @@
     "format": "prettier --write \"**/*.+(ts|tsx|json|css|md)\""
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.8",
     "axios": "^1.8.4",
     "next": "15.2.3",
     "react": "^19.0.0",
